vault/vault-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingres
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: vault.raydensolution.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: vault-ui
              port:
                number: 8200
